5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1630_2943.log
== TEST (2019-04-02 17:13:47) 
-- CODE:
import math
math.pi*2
-- ERROR:
File "XXXX", line 5
    S=var1+var2 var3
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:14:12) 
-- CODE:
import math
math.pi*2**2
-- ERROR:
File "XXXX", line 5
    S=var1+var2 var3
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
